<resources>
    <string name="app_name">VistaTest</string>
    <string name="usuario">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="iniciar_sesion">INICIAR SESIÓN</string>
    <string name="title_activity_nav_drawer">NavDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Nombre de Usuario</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Menú Principal</string>
    <string name="GestiondeIdentidades">Gestión de Identidades</string>
    <string name="menu_logout">Cerrar Sesión</string>
    <string name="cerrar_sesi_n">Cerrar Sesión</string>
    <string name="solicitar_aplicativo">Solicitar Aplicativo</string>
    <string name="generar_paz_y_salvo">Generar Paz y Salvo</string>
    <string name="btnRegister">Solicitar Usuario al Sistema de Administración de Recursos y Aplicaciones</string>
    <string name="login">Iniciar Sesión</string>
    <string name="solicitar">"Solicitar"</string>
    <string name="cargo">"  Cargo"</string>
    <string name="email">"  Email"</string>
    <string name="primer_nombre">"  Primer Nombre"</string>
    <string name="primer_apellido">"  Primer Apellido"</string>
    <string name="segundo_nombre">"  Segundo Nombre"</string>
    <string name="n_de_documento">"  N° de Documento"</string>
    <string name="segundo_apellido">"  Segundo Apellido"</string>
    <string name="fecha_final_de_contrato">Fecha final de Contrato</string>
    <string name="ver_solicitudes">Ver Solicitudes</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="paz_y_salvo">Paz y Salvo</string>
    <string name="description_icon">Botón para Visualizar</string>
    <string name="tipo_de_solicitud">Tipo de Solicitud</string>
    <string name="modulo">Modulo</string>
    <string name="aplicativo">Aplicativo</string>
    <string name="Nombre_Completo">Nombre Completo</string>
    <string name="id">ID</string>
    <string name="cedula">Cédula</string>
    <string name="cargo_o_num_de_contrato">Cargo o n° de contrato</string>
    <string name="fecha_de_solicitud">Fecha de solicitud</string>
    <string name="observacion">Observacion</string>
    <string name="forgot_password">Olvidé mi contraseña</string>
    <string name="Recover_Password_text">Por favor, ingresa tu correo electrónico registrado para restablecer tu contraseña. Te enviaremos un correo con las instrucciones para recuperar el acceso a tu cuenta.</string>
    <string name="enviar_correo_de_recuperacion">Enviar correo de recuperación</string>
</resources>