<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />


    </group>

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/identity"
            android:iconTint="@color/white"

            android:title="@string/menu_gallery">
            <menu>

                <item
                    android:id="@+id/nav_SolicitarAplicativo"
                    android:title="@string/solicitar_aplicativo"
                    />
                <item
                    android:id="@+id/nav_VerSolicitudes"
                    android:title="@string/ver_solicitudes" />
            </menu>

        </item>

    </group>

    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/logout"
        android:title="@string/menu_logout" />

</menu>